--- a/racer-master/racer.html
+++ b/racer-master/racer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html><head>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
         <!--<script src="jquery.js"></script>-->
         <script src="racer.js"></script>
         <style>
